--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ tasks:
   # Bash terminal for user to use
   - name: Terminal
     # Install code evaluator
-    init: composer require "squizlabs/php_codesniffer=*"
+    init: composer install"
     command: ./vendor/bin/phpcs --config-set default_standard PSR2
   # Docker terminal to run our Docker containers and let the user see the output
   - name: Docker
