--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "squizlabs/php_codesniffer": "*"
+    },
+    "scripts": {
+        "phpcs": "./vendor/bin/phpcs --standard=PSR2"
     }
 }
