--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ tasks:
   # Bash terminal for user to use
   - name: Terminal
     # Install code evaluator
-    init: composer install
+    init: composer install && composer phpcs
   # Docker terminal to run our Docker containers and let the user see the output
   - name: Docker
     init: docker-compose up --no-start --build
